k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kailash-portfolio-service
  namespace: portfolio
  labels:
    app: kailash-portfolio-service
spec:
  selector:
    app: kailash-portfolio
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      #nodePort: 30002
