k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kailash-portfolio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kailash-portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kailash-portfolio-service
                port:
                  number: 80
